login, home and user's password change done

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,5 +46,16 @@ table {
 html, body {
     height: 100%;
     font-family: Tahoma, Arial;
-    display: grid;
+    display: flex;
+    flex-direction: column;
 }
+
+body {
+    margin: 10px 10px;
+}
+
+table th {
+    font-weight: bold;
+}
+
+
