--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,18 +1,7 @@
 section {
     display: flex;
     flex-direction: column;
-}
-
-section > p:nth-of-type(1) {
-    margin-bottom: 20px;
-}
-
-section > p:nth-child(3) {
-    margin: 50px 0;
-}
-
-section > p > span {
-    font-weight: bold;
+    justify-self: center;
 }
 
 table {
