displayNotes on work

--- a/public/css/changepassword.css
+++ b/public/css/changepassword.css
@@ -1,4 +1,4 @@
-section {
+.changePassword {
     width: 65%;
     height: 100%;
     display: flex;
@@ -9,11 +9,17 @@ section {
     align-items: center;
 }
 
-section > * {
+.changePassword > * {
     margin-bottom: 20px;
 }
 
-form {
+.changePassword > h3 {
+    align-self: flex-start;
+    font-weight: bold;
+    font-size: larger;
+}
+
+.changePassword form {
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -21,18 +27,12 @@ form {
     align-items: stretch;
 }
 
-section > h3 {
-    align-self: flex-start;
-    font-weight: bold;
-    font-size: larger;
-}
-
-form > *:not(.text-danger) {
+.changePassword form > *:not(.text-danger) {
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
 }
 
-label > span {
+.changePassword label > span {
     margin: 5px 0;
 }
