update user function done

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,6 +1,6 @@
 .login {
     width: 65%;
-    height: 100%;
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-self: center;
@@ -15,8 +15,6 @@
 
 .login > h3 {
     align-self: flex-start;
-    font-weight: bold;
-    font-size: larger;
 }
 
 .login form {
