--- a/public/css/changepassword.css
+++ b/public/css/changepassword.css
@@ -1,6 +1,6 @@
 .changePassword {
     width: 65%;
-    height: 100%;
+    flex: 1;
     display: flex;
     flex-direction: column;
     align-self: center;
@@ -15,8 +15,6 @@
 
 .changePassword > h3 {
     align-self: flex-start;
-    font-weight: bold;
-    font-size: larger;
 }
 
 .changePassword form {
