--- a/public/css/displayNotes.css
+++ b/public/css/displayNotes.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-self: center;
+    margin: 10px;
 }
 
 .displayNotes > div:first-child {
