--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,25 +19,31 @@ time, mark, audio, video {
     font: inherit;
     vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
     display: block;
 }
+
 body {
     line-height: 1;
 }
+
 ol, ul {
     list-style: none;
 }
+
 blockquote, q {
     quotes: none;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
     content: '';
     content: none;
 }
+
 table {
     border-collapse: collapse;
     border-spacing: 0;
@@ -49,6 +55,7 @@ html, body {
     display: flex;
     flex-direction: column;
 }
+
 header {
     margin: 10px;
 }
@@ -82,7 +89,6 @@ label {
 }
 
 h3 {
-    font-weight: bold;
     font-size: xx-large;
 }
 
@@ -114,6 +120,12 @@ h3 {
 .btn {
     align-items: center;
     justify-content: center;
+}
+
+.sectionTitle {
+    font-weight: bold;
+    justify-self: center;
+    align-self: center!important;
 }
 
 
